; ModuleID = '/home/carl/AnghaBench/libevent/extr_arc4random.c_arc4_stir_if_needed.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_arc4random.c_arc4_stir_if_needed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@arc4_count = common dso_local global i64 0, align 8
@rs_initialized = common dso_local global i32 0, align 4
@arc4_stir_pid = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @arc4_stir_if_needed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @arc4_stir_if_needed() #0 {
  %1 = alloca i64, align 8
  %2 = call i64 (...) @getpid()
  store i64 %2, i64* %1, align 8
  %3 = load i64, i64* @arc4_count, align 8
  %4 = icmp sle i64 %3, 0
  br i1 %4, label %12, label %5

5:                                                ; preds = %0
  %6 = load i32, i32* @rs_initialized, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %5
  %9 = load i64, i64* @arc4_stir_pid, align 8
  %10 = load i64, i64* %1, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %15

12:                                               ; preds = %8, %5, %0
  %13 = load i64, i64* %1, align 8
  store i64 %13, i64* @arc4_stir_pid, align 8
  %14 = call i32 (...) @arc4_stir()
  br label %15

15:                                               ; preds = %12, %8
  ret void
}

declare dso_local i64 @getpid(...) #1

declare dso_local i32 @arc4_stir(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
